# CMakeList.txt : CMake project for CPPWeek 1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.2)

project ("CPPWeek 1")

# Add source to this project's executable.
add_executable (JustinThomas_Lab1 "CPPWeek 1.cpp" "CPPWeek 1.h")


# TODO: Add tests and install targets if needed.
